# camber

./: .gitignore  .pedant.toml  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
.pedant/baselines/cargo/addr2line/: 0.25.1.json
.pedant/baselines/cargo/adler2/: 2.0.1.json
.pedant/baselines/cargo/ahash/: 0.8.12.json
.pedant/baselines/cargo/aho-corasick/: 1.1.4.json
.pedant/baselines/cargo/aligned-vec/: 0.6.4.json
.pedant/baselines/cargo/android_system_properties/: 0.1.5.json
.pedant/baselines/cargo/anstream/: 1.0.0.json
.pedant/baselines/cargo/anstyle/: 1.0.14.json
.pedant/baselines/cargo/anstyle-parse/: 1.0.0.json
.pedant/baselines/cargo/anstyle-query/: 1.1.5.json
.pedant/baselines/cargo/anstyle-wincon/: 3.0.11.json
.pedant/baselines/cargo/anyhow/: 1.0.102.json
.pedant/baselines/cargo/arc-swap/: 1.9.1.json
.pedant/baselines/cargo/arrayvec/: 0.7.6.json
.pedant/baselines/cargo/asn1-rs/: 0.6.2.json  0.7.1.json
.pedant/baselines/cargo/asn1-rs-derive/: 0.5.1.json  0.6.0.json
.pedant/baselines/cargo/asn1-rs-impl/: 0.2.0.json
.pedant/baselines/cargo/assert-json-diff/: 2.0.2.json
.pedant/baselines/cargo/async-channel/: 2.5.0.json
.pedant/baselines/cargo/async-compression/: 0.4.41.json
.pedant/baselines/cargo/async-http-codec/: 0.8.0.json
.pedant/baselines/cargo/async-io/: 2.6.0.json
.pedant/baselines/cargo/async-nats/: 0.47.0.json
.pedant/baselines/cargo/async-net/: 2.0.0.json
.pedant/baselines/cargo/async-task/: 4.7.1.json
.pedant/baselines/cargo/async-trait/: 0.1.89.json
.pedant/baselines/cargo/async-web-client/: 0.6.2.json
.pedant/baselines/cargo/atomic-waker/: 1.1.2.json
.pedant/baselines/cargo/autocfg/: 1.5.0.json
.pedant/baselines/cargo/aws-config/: 1.8.15.json
.pedant/baselines/cargo/aws-credential-types/: 1.2.14.json
.pedant/baselines/cargo/aws-lc-rs/: 1.16.2.json
.pedant/baselines/cargo/aws-runtime/: 1.7.2.json
.pedant/baselines/cargo/aws-sdk-sqs/: 1.97.0.json
.pedant/baselines/cargo/aws-sdk-sts/: 1.101.0.json
.pedant/baselines/cargo/aws-sigv4/: 1.4.2.json
.pedant/baselines/cargo/aws-smithy-async/: 1.2.14.json
.pedant/baselines/cargo/aws-smithy-http/: 0.63.6.json
.pedant/baselines/cargo/aws-smithy-http-client/: 1.1.12.json
.pedant/baselines/cargo/aws-smithy-json/: 0.62.5.json
.pedant/baselines/cargo/aws-smithy-observability/: 0.2.6.json
.pedant/baselines/cargo/aws-smithy-query/: 0.60.15.json
.pedant/baselines/cargo/aws-smithy-runtime/: 1.10.3.json
.pedant/baselines/cargo/aws-smithy-runtime-api/: 1.11.6.json
.pedant/baselines/cargo/aws-smithy-types/: 1.4.7.json
.pedant/baselines/cargo/aws-smithy-xml/: 0.60.15.json
crates/camber/: CHANGELOG.md  Cargo.toml  build.rs
crates/camber-bench/: Cargo.toml
crates/camber-bench/examples/realapp-axum/: Cargo.toml
crates/camber-bench/examples/realapp-axum/src/: main.rs
crates/camber-bench/examples/realapp-camber/: Cargo.toml
crates/camber-bench/examples/realapp-camber/src/: main.rs
crates/camber-bench/examples/realapp-go/: main.go
crates/camber-bench/go/: go.mod  main.go
crates/camber-bench/src/: error.rs  lib.rs  load.rs  loc.rs  main.rs  orchestrate.rs  report.rs
crates/camber-bench/src/servers/: assets.rs  axum_server.rs  camber_server.rs  go_server.rs  handle.rs  mod.rs  upstream.rs
crates/camber-bench/static/: bench.html
crates/camber-bench/tests/: loc.rs  smoke.rs
crates/camber-build/: CHANGELOG.md  Cargo.toml
crates/camber-build/src/: builder.rs  codegen.rs  lib.rs
crates/camber-cli/: .pedant.toml  CHANGELOG.md  Cargo.toml
crates/camber-cli/src/: config.rs  context.rs  lib.rs  main.rs  new.rs  serve.rs  template.rs
crates/camber-cli/tests/: cli_context.rs  cli_new.rs  cli_serve.rs  compile_time.rs  operational.rs
crates/camber-macros/: CHANGELOG.md  Cargo.toml
crates/camber-macros/src/: expand.rs  lib.rs
crates/camber/src/: __private.rs  acme.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  logging.rs  prng.rs  resource.rs  resource_lifecycle.rs  runtime.rs  runtime_state.rs  schedule.rs  secret.rs  select.rs  signals.rs  task.rs  time.rs  tls.rs
crates/camber/src/channel/: mod.rs  mpsc_impl.rs  sync.rs  watch.rs
crates/camber/src/dns01/: acme.rs  cloudflare.rs  mod.rs  provider.rs  setup.rs
crates/camber/src/http/: async_proxy.rs  body.rs  buffer_config.rs  client.rs  compression.rs  conn.rs  cookie.rs  cors.rs  dispatch.rs  encoding.rs  grpc_support.rs  handle.rs  health.rs  host_router.rs  internal_routes.rs  method.rs  middleware.rs  mock.rs  mod.rs  multipart.rs  otel.rs  rate_limit.rs  request.rs  response.rs  router.rs  server.rs  sse.rs  static_files.rs  stream.rs  trie.rs  util.rs  validate.rs  websocket.rs  ws_proxy.rs
crates/camber/src/mq/: error.rs  mod.rs  nats.rs  sqs.rs
crates/camber/src/net/: accept.rs  forward.rs  listener.rs  mod.rs  tcp.rs  tls_stream.rs  udp.rs
crates/camber/tests/: acme_core.rs  async_client.rs  async_schedule.rs  async_task.rs  auto_tls.rs  bidirectional.rs  binary_body.rs  body_limit.rs  builder.rs  cancellation.rs  channels.rs  channels_crossbeam.rs  circuit_breaker.rs  client_methods.rs  client_timeouts.rs  compression.rs  config.rs  connection_limit.rs  cookies.rs  cors.rs  dns01.rs  e2e_twenty_minutes.rs  e2e_v02.rs  e2e_v04.rs  e2e_v07.rs  e2e_v08.rs  e2e_v2.rs  error_paths.rs  every_async_notified.rs  form_body.rs  grpc.rs  health_check.rs  host_routing.rs  http2.rs  http_background.rs  http_router.rs  http_server.rs  hyper_transport.rs  json.rs  keepalive.rs  (+50 more)
crates/camber/tests/common/: mod.rs
crates/camber/tests/support/: mod.rs  ws_binary_helpers.rs  ws_frame_io.rs  ws_helpers.rs  ws_text_helpers.rs
deploy/: camber.service
docs/: vision.md
docs/guides/: cross-compile.md  go-to-camber.md  proxy-quickstart.md  tokio-to-camber.md
docs/reference/: README.md  cli.md  client.md  config.md  database.md  error.md  http.md  logging.md  middleware.md  net.md  resource.md  runtime.md  schedule.md  secret.md  signals.md  tasks-and-channels.md  time.md  tls.md
(+431 files in other folders)
