[workspace]
members = ["crates/*"]
default-members = ["crates/camber", "crates/camber-build", "crates/camber-cli", "crates/camber-macros"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
single_match = "allow"
single_match_else = "allow"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
needless_bool = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.test]
incremental = true
